@startuml

title __BATTERYFACTORY's Class Diagram__\n

  namespace controller {
    class controller.Main {
    }
  }
  

  namespace model {
    class model.BatteryFactory {
    }
  }
  

  namespace model {
    enum BatteryTechnology {
    }
  }
  

  namespace model {
    class model.CarBattery {
    }
  }
  

  namespace model {
    class model.Client {
    }
  }
  

  namespace model {
    interface model.IBattery {
    }
  }
  

  namespace model {
    class model.MobilePhoneBattery {
    }
  }
  

  namespace model {
    class model.PowerToolBattery {
    }
  }
  

  model.CarBattery .up.|> model.IBattery
  model.CarBattery o-- model.BatteryTechnology : batteryTechnology
  model.Client o-- model.BatteryFactory : bf
  model.MobilePhoneBattery .up.|> model.IBattery
  model.MobilePhoneBattery o-- model.BatteryTechnology : batteryTechnology
  model.PowerToolBattery .up.|> model.IBattery
  model.PowerToolBattery o-- model.BatteryTechnology : batteryTechnology


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
